--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                            <input type="text" class="form-control text-center currentQty" value="1">
                            <button class="btn btn-default"><i class="fas fa-plus increaseQty"></i></button>
                         </div>
-                        <h5>$<span id="itemPrice">1219</span></h5>
+                        <h5>$<span id="itemPrice1">1219</span></h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -48,7 +48,7 @@
                            <button class="btn btn-default"><i class="fas fa-plus increaseQty"></i></button>
 
                         </div>
-                        <h5>$59</h5>
+                        <h5>$<span id="itemPrice2">59</span></h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -59,14 +59,14 @@
 
                      <div class="col-md-8">
                         <h5>Subtotal: </h5>
-                        <h5>Tax:</h5>
+                        <h5>Tax(3%):</h5>
                         <h5>Total:</h5>
                      </div>
 
                      <div class="col-md-4 status">
-                        <h5>$1,278</h5>
-                        <h5>$0</h5>
-                        <h5>$1,278</h5>
+                        <h5>$ <span id="subtotal"></span></h5>
+                        <h5>$ <span id="tax"></span>00</h5>
+                        <h5>$ <span id="total"></span></h5>
                      </div>
                   </div>
                </div>
@@ -86,6 +86,28 @@
             let currentQtyNumber = parseInt(currentQty);
             let totalQty = currentQtyNumber + 1;
             document.getElementsByClassName('currentQty')[0].value = totalQty;
+
+            //Update Price by using quantity
+            const totalAmount = 1219 * totalQty;
+            document.getElementById('itemPrice1').innerText = totalAmount;
+
+            //Subtotal Section
+         const item1 = document.getElementById('itemPrice1').innerText;
+         const item1Price = parseInt(item1);
+         const item2 = document.getElementById('itemPrice2').innerText;
+         const item2Price = parseInt(item2);
+
+         const itemPriceTotal = item1Price + item2Price;
+         document.getElementById('subtotal').innerText = itemPriceTotal;
+
+         // Tax Section
+         const taxAmount = (itemPriceTotal * 0.03).toPrecision(4);
+         const taxAmountNumber = parseFloat(taxAmount);
+         document.getElementById('tax').innerText = taxAmount;
+
+         // //Total Section 
+         const grandTotal = itemPriceTotal + taxAmountNumber;
+         document.getElementById('total').innerText = grandTotal;
          })
 
       var increaseQty = document.getElementsByClassName('increaseQty')[1];
@@ -94,6 +116,28 @@
             let currentQtyNumber = parseInt(currentQty);
             let totalQty = currentQtyNumber + 1;
             document.getElementsByClassName('currentQty')[1].value = totalQty;
+
+            //Update Price by using quantity
+            const totalAmount = 59 * totalQty;
+            document.getElementById('itemPrice2').innerText = totalAmount;
+
+            //Subtotal Section
+         const item1 = document.getElementById('itemPrice1').innerText;
+         const item1Price = parseInt(item1);
+         const item2 = document.getElementById('itemPrice2').innerText;
+         const item2Price = parseInt(item2);
+
+         const itemPriceTotal = item1Price + item2Price;
+         document.getElementById('subtotal').innerText = itemPriceTotal;
+
+         // Tax Section
+         const taxAmount = (itemPriceTotal * 0.03).toPrecision(4);
+         const taxAmountNumber = parseFloat(taxAmount);
+         document.getElementById('tax').innerText = taxAmount;
+
+         // //Total Section 
+         const grandTotal = itemPriceTotal + taxAmountNumber;
+         document.getElementById('total').innerText = grandTotal;
          })
 
       //Decrease Quantity
@@ -103,6 +147,28 @@
             let currentQtyNumber = parseInt(currentQty);
             let totalQty = currentQtyNumber - 1;
             document.getElementsByClassName('currentQty')[0].value = totalQty;
+
+            //Update Price by using quantity
+            const totalAmount = 1219 * totalQty;
+            document.getElementById('itemPrice1').innerText = totalAmount;
+
+            //Subtotal Section
+         const item1 = document.getElementById('itemPrice1').innerText;
+         const item1Price = parseInt(item1);
+         const item2 = document.getElementById('itemPrice2').innerText;
+         const item2Price = parseInt(item2);
+
+         const itemPriceTotal = item1Price + item2Price;
+         document.getElementById('subtotal').innerText = itemPriceTotal;
+
+         // Tax Section
+         const taxAmount = (itemPriceTotal * 0.03).toPrecision(4);
+         const taxAmountNumber = parseFloat(taxAmount);
+         document.getElementById('tax').innerText = taxAmount;
+
+         // //Total Section 
+         const grandTotal = itemPriceTotal + taxAmountNumber;
+         document.getElementById('total').innerText = grandTotal;
          })
 
       var decreaseQty = document.getElementsByClassName('decreaseQty')[1];
@@ -111,8 +177,48 @@
             let currentQtyNumber = parseInt(currentQty);
             let totalQty = currentQtyNumber - 1;
             document.getElementsByClassName('currentQty')[1].value = totalQty;
+
+            //Update Price by using quantity
+            const totalAmount = 59 * totalQty;
+            document.getElementById('itemPrice2').innerText = totalAmount;
+
+            //Subtotal Section
+         const item1 = document.getElementById('itemPrice1').innerText;
+         const item1Price = parseInt(item1);
+         const item2 = document.getElementById('itemPrice2').innerText;
+         const item2Price = parseInt(item2);
+
+         const itemPriceTotal = item1Price + item2Price;
+         document.getElementById('subtotal').innerText = itemPriceTotal;
+
+         // Tax Section
+         const taxAmount = (itemPriceTotal * 0.03).toPrecision(4);
+         const taxAmountNumber = parseFloat(taxAmount);
+         document.getElementById('tax').innerText = taxAmount;
+
+         // //Total Section 
+         const grandTotal = itemPriceTotal + taxAmountNumber;
+         document.getElementById('total').innerText = grandTotal;
          })
 
+         //Subtotal Section
+         const item1 = document.getElementById('itemPrice1').innerText;
+         const item1Price = parseInt(item1);
+         const item2 = document.getElementById('itemPrice2').innerText;
+         const item2Price = parseInt(item2);
+
+         const itemPriceTotal = item1Price + item2Price;
+         document.getElementById('subtotal').innerText = itemPriceTotal;
+
+         // Tax Section
+         const taxAmount = (itemPriceTotal * 0.03).toPrecision(4);
+         const taxAmountNumber = parseFloat(taxAmount);
+         document.getElementById('tax').innerText = taxAmount;
+
+         // //Total Section 
+         const grandTotal = itemPriceTotal + taxAmountNumber;
+         document.getElementById('total').innerText = grandTotal;
+      
       
    </script>
 </body>
